--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             <!-- <li><a href="#"></a>Sign up</li>
             <li><a href="#"></a>Login</li> -->
             <li>
-                <a href="#">Hamada Bachar</a>
+                <a href="#">
+                    <i class="fa fa-user"></i>
+                    Hamada Bachar
+                    <i class="fa fa-chevron-down" style="font-size: .8rem;"></i>
+                </a>
                 <ul>
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="#" class="logout">Logout</a></li>
@@ -39,5 +43,12 @@
             </li>
         </ul>
     </header>
+
+
+    <!-- =========JQuery======== -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
+    <!-- ===========javascript============ -->
+    <script src="/js/script.js"></script>
 </body>
 </html>
