--- a/index.html
+++ b/index.html
@@ -168,7 +168,26 @@
                   </div>
                 </div>
                 <!-- ===========//MAin content=========== -->
-                <div class="sidebar"></div>
+                <div class="sidebar">
+                    <div class="section search">
+                       <h2 class="section-title">Search</h2>
+                       <form action="index.html" method="post">
+                        <input type="text" name="search-term" class="text-input" placeholder="Search...">
+                       </form>
+                    </div>
+
+                    <div class="section topics">
+                        <h2 class="section-title">Topics</h2>
+                        <ul>
+                            <li><a href="#">Poems</a></li>
+                            <li><a href="#">Quotes</a></li>
+                            <li><a href="#">Fiction</a></li>
+                            <li><a href="#">Biography</a></li>
+                            <li><a href="#">Motivation</a></li>
+                            <li><a href="#">Life Lessons</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <!-- ========//========= -->
 
@@ -176,8 +195,73 @@
        
         <!-- ===========//Content ============= -->
 
+        <!-- ========================== -->
+
     </div>
      <!-- =========== //page Wrapper ============= -->
+
+     <!-- ============footer section========== -->
+     <div class="footer">
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h1 class="logo-text"><span>Ham</span>BLOG</h1>
+                <p>
+                    hamBLOG is a functional blog conceived for the purpose of a project on programming.
+                    however, HamBlog has a blog called hamBLOG.com where he write truly inspiring stuff.
+                </p>
+                <div class="contact">
+                    <span><i class="fas fa-phone"></i> &nbsp; 123-456-789</span>
+                    <span><i class="fas fa-envelope"></i> &nbsp; bacharhamada1@gmail.com</span>
+                </div>
+                <div class="socials">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+
+            <div class="footer-section links">
+                <h2>Quick Links</h2>
+                <br>
+                <ul>
+                    <a href="#">
+                    <li>Events</li>
+                    </a>
+                    <a href="#">
+                        <li>Team</li>
+                    </a>
+                    <a href="#">
+                        <li>Mentores</li>
+                    </a>
+                    <a href="#">
+                        <li>Gallery</li>
+                    </a>
+                    <a href="#">
+                        <li>Terms and conditions</li>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="footer-section contact-form">
+                <h2>Contact us</h2>
+                <br>
+                <form action="index.html" method="post">
+                    <input type="email" name="email" class="text-input conctact-input" placeholder="Your email address...">
+                    <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
+                    <button type="submit" class="btn btn-big">
+                        <i class="fas fa-envelope"></i>
+                        Send
+                    </button>
+                </form>
+            </div>
+
+        </div>
+        <div class="footer-bottom">
+            &copy; Hamadaportofolio.com | Designed by Hamada Djeroua
+        </div>
+     </div>
+     <!-- ============End footer section====== -->
 
     <!-- =========JQuery======== -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
