--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                 <h2>Contact us</h2>
                 <br>
                 <form action="index.html" method="post">
-                    <input type="email" name="email" class="text-input conctact-input" placeholder="Your email address...">
-                    <textarea name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
-                    <button type="submit" class="btn btn-big">
+                    <input type="email" name="email" class="text-input contact-input" placeholder="Your email address...">
+                    <textarea rows="4" name="message" class="text-input contact-input" placeholder="Your message..."></textarea>
+                    <button type="submit" class="btn btn-big contact-btn">
                         <i class="fas fa-envelope"></i>
                         Send
                     </button>
