--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- ======== Css ========= -->
     <link rel="stylesheet" href="/css/style.css">
     
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
     <header>
