--- a/single.html
+++ b/single.html
@@ -16,7 +16,7 @@
     <!-- ======== Css ========= -->
     <link rel="stylesheet" href="/css/style.css">
     
-    <title>Single Post </title>
+    <title>Single Post</title>
 </head>
 <body>
     <!-- ========= facebook page======= -->
@@ -28,7 +28,7 @@
         </div>
         <i class="fa fa-bars menu-toggle"></i>
         <ul class="nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <!-- <li><a href="#"></a>Sign up</li>
