--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <i class="fa fa-chevron-down" style="font-size: .8rem;"></i>
                 </a>
                 <ul>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="/admin/posts/index.html">Dashboard</a></li>
                     <li><a href="#" class="logout">Logout</a></li>
                 </ul>
             </li>
