--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Candal&family=Lora&family=Roboto+Slab:wght@300;400;500;600&display=swap" rel="stylesheet">
 
     <!-- ======== Css ========= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     
     <title>Blog</title>
 </head>
